--- a/index.html
+++ b/index.html
@@ -148,8 +148,7 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center titulo-people">
 					<h1>PEOPLE</h1>					
-					<p>We are a group of professionals and artisan chefs with a passion for culinary excellence.
-</p>
+					<p>We are a group of professionals and artisan chefs with a passion for culinary excellence.</p>
 					<hr class="el-hr">
 				</div>
 			</div>
@@ -201,6 +200,94 @@
 	</section>
 
 	<!-- SECTION PRESS -->
+	<section class="press">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center titulo-press">
+					<h1>PRESS</h1>	
+					<hr class="el-hr">				
+					<p>Here's what the critics are saying.</p>
+				</div>
+				<div id="carousel-example-generic" class="col-lg-10 col-lg-offset-1  col-md-10 col-md-offset-1  col-sm-12 col-xs-12 carousel slide" data-ride="carousel">
+					<!-- Indicators -->
+					<ol class="carousel-indicators">
+						<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+					    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+					</ol>
+					<!-- Wrapper for slides -->
+					<div class="carousel-inner" role="listbox">
+						<div class="item active">
+					    	<!-- Testimonial Item 1 -->
+	                        <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-12 col-xs-12 text-center el-texto-carrusel">
+	                         	<h2 class="cita">"A unique blend of flavors at this restaurant made for an unforgettable culinary adventure."</h2>
+	                            <hr class="el-hr-3">
+	                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, temporibus, laborum, dignissimos doloremque corporis alias nostrum recusandae culpa id quisquam harum impedit sed sunt non obcaecati vero ipsam aut fugit?</p>	                           
+	                            <div class="row">
+	                            	<div class="col-lg-4 col-lg-offset-2 col-md-4 col-md-offset-2 ">
+	                            		<div class="testimonial-img">
+	                                		<img class="rounded-circle img-fluid" src="assets/img/testimonial_1.jpg" alt="">
+	                            		</div>
+	                            	</div>
+									<div class="col-lg-2 col-md-2 ">
+										<div class="testimonial-author">
+	                                		<span class="name">Jim Walker</span>
+	                                		<p class="small">Food Critic</p>
+	                                		<div class="stars">
+	                                    		<i class="fa fa-star"></i>
+	                                   			<i class="fa fa-star"></i>
+	                                    		<i class="fa fa-star"></i>
+	                                    		<i class="fa fa-star"></i>
+	                                    		<i class="fa fa-star"></i>
+	                                		</div>
+	                            		</div>
+									</div>
+	                            </div>
+	                        </div>
+					    </div>
+						<div class="item">
+		    				<!-- Testimonial Item 1 -->
+	                        <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-12 col-xs-12 text-center el-texto-carrusel">
+ 								<h2 class="cita">"Some of the best food I ever tasted came from the head chef."</h2>
+	                            <hr class="el-hr-3">
+	                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem amet rem minus dolorum, facere in soluta explicabo, unde eveniet illo vel, nemo nostrum atque nesciunt facilis quaerat quasi reprehenderit dicta.</p>
+	                            <div class="row">
+	                            	<div class="col-lg-4 col-lg-offset-2 col-md-4 col-md-offset-2 ">
+	                            		<div class="testimonial-img">
+	                                		<img class="rounded-circle img-fluid" src="assets/img/testimonial_2.jpg" alt="">
+	                            		</div>
+	                            	</div>
+									<div class="col-lg-2 col-md-2 ">
+										<div class="testimonial-author">
+	                                		<span class="name">Ashley Creadle</span>
+	                                		<p class="small">Writer at Cuisine World</p>
+	                                		<div class="stars">
+	                                    		<i class="fa fa-star"></i>
+	                                   			<i class="fa fa-star"></i>
+	                                    		<i class="fa fa-star"></i>
+	                                    		<i class="fa fa-star"></i>
+	                                    		<i class="fa fa-star"></i>
+	                                		</div>
+	                            		</div>
+									</div>
+	                            </div>
+	                        </div>
+					    </div>
+					</div>
+					<!-- Controls -->
+					<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+						<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+					    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+					    <span class="sr-only">Next</span>
+					</a>
+				</div>					
+			</div>
+		</div>
+	</section>
+
+
 
 
 
