--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<!-- Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,900|Roboto:300,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,900|Roboto:300,400,900" rel="stylesheet">
     <!-- Linkear Font Awesome -->
     <script src="https://use.fontawesome.com/6bff936249.js"></script>
     <!-- CDN bootstrap -->
@@ -71,7 +71,7 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center titulo-value">
 					<h1>OUR VALUES</h1>
-					<hr class="el-hr">
+					<hr class="el-hr">				
 					<p>We create flavorsome, traditional dishes using fresh, local ingredients.</p>
 				</div>
 			</div>
@@ -153,8 +153,8 @@
 				</div>
 			</div>
 			<div class="row img-people-caja">
-				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 img-people">
-					<div class="img-people-1"></div>
+				<div class="col-lg-4 col-md-4 hidden-sm hidden-xs img-people">
+					<div class="img-people-1"><img src="assets/img/sr-1.jpg" alt=""></div>
 					<div class="mascara"></div>
 					<div class="text-people text-center">
 						<h3>ALAN WIMBLEDON</h3>
@@ -167,8 +167,8 @@
 						</ul>
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 img-people">
-					<div class="img-people-2"></div>
+				<div class="col-lg-4 col-md-4 col-sm-12   col-xs-12 img-people">
+					<div class="img-people-2"><img src="assets/img/sr-2.jpg" alt=""></div>
 					<div class="mascara"></div>
 					<div class="text-people text-center">
 						<h3>JEFFERY HOWARD</h3>
@@ -181,8 +181,8 @@
 						</ul>
 					</div>	
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 img-people">
-					<div class="img-people-3"></div>
+				<div class="col-lg-4 col-md-4 hidden-sm hidden-xs img-people">
+					<div class="img-people-3"><img src="assets/img/sr-3.jpg" alt=""></div>
 					<div class="mascara"></div>
 					<div class="text-people text-center">
 						<h3>KENNY WILLIAMS</h3>
@@ -223,14 +223,14 @@
 	                            <hr class="el-hr-3">
 	                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, temporibus, laborum, dignissimos doloremque corporis alias nostrum recusandae culpa id quisquam harum impedit sed sunt non obcaecati vero ipsam aut fugit?</p>	                           
 	                            <div class="row">
-	                            	<div class="col-lg-4 col-lg-offset-2 col-md-4 col-md-offset-2 ">
+	                            	<div class="col-lg-4 col-lg-offset-2 col-md-4 col-md-offset-2">
 	                            		<div class="testimonial-img">
 	                                		<img class="rounded-circle img-fluid" src="assets/img/testimonial_1.jpg" alt="">
 	                            		</div>
 	                            	</div>
-									<div class="col-lg-2 col-md-2 ">
+									<div class="col-lg-3 col-md-3 ">
 										<div class="testimonial-author">
-	                                		<span class="name">Jim Walker</span>
+	                                		<h5 class="name">JIM WALKER</h5>
 	                                		<p class="small">Food Critic</p>
 	                                		<div class="stars">
 	                                    		<i class="fa fa-star"></i>
@@ -251,14 +251,14 @@
 	                            <hr class="el-hr-3">
 	                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem amet rem minus dolorum, facere in soluta explicabo, unde eveniet illo vel, nemo nostrum atque nesciunt facilis quaerat quasi reprehenderit dicta.</p>
 	                            <div class="row">
-	                            	<div class="col-lg-4 col-lg-offset-2 col-md-4 col-md-offset-2 ">
+	                            	<div class="col-lg-4 col-lg-offset-2 col-md-4 col-md-offset-2">
 	                            		<div class="testimonial-img">
 	                                		<img class="rounded-circle img-fluid" src="assets/img/testimonial_2.jpg" alt="">
 	                            		</div>
 	                            	</div>
-									<div class="col-lg-2 col-md-2 ">
+									<div class="col-lg-3 col-md-3 ">
 										<div class="testimonial-author">
-	                                		<span class="name">Ashley Creadle</span>
+	                                		<h5 class="name">ASHLEY CREADLE</h5>
 	                                		<p class="small">Writer at Cuisine World</p>
 	                                		<div class="stars">
 	                                    		<i class="fa fa-star"></i>
@@ -288,8 +288,144 @@
 	</section>
 
 
+	<!-- SECTION NEWSLETTER -->
+	<section class="newsletter">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center titulo-newsletter">
+					<h2>SUBSCRIBE TO OUR NEWSLETTER!</h2>	
+					<hr class="el-hr">	
+				</div>	
+				<div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-12 col-xs-12 ">
+					<form action="">
+						<div class="input-group">
+							<input type="text" class="form-control" placeholder="Email address..." aria-describedby="basic-addon2">
+							<span class="input-group-addon" id="basic-addon2">SUSBCRIBE!</span>
+						</div>
+					</form>	
+				</div>						
+			</div>
+		</div>	
+	</section>
 
+	<!-- SECTION HOURS -->
+	<section class="hours">
+		<div class="container las-hours">
+			<div class="row text-caja-hours">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center titulo-hours">
+					<h2>HOURS</h2>	
+					<hr class="el-hr">	
+					<p>Here's what the critics are saying.</p>	
+				</div>	
+			</div>
+			<div class="row las-cajas-hours">
+				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center cajas-hours">
+					<div class="caja-hora">
+						<div class="item-caja">
+							<h3>BREAKFAST</h3>
+							<hr class="el-hr-2">
+							
+							<ul class="list-group">
+								<li class="list-group-item">
+									<div class="w-100 text-center"><em>Mon - Thu: 7am - 11am</em></div>
+								</li>
+								<li class="list-group-item">
+									<div class="w-100 text-center"><em>Fri: 7am - 12pm</em></div>
+								</li>
+								<li class="list-group-item">
+									<div class="w-100 text-center"><em>Sat: 7am - 3pm</em></div>
+								</li>	
+								<li class="list-group-item">
+									<div class="w-100 text-center"><em>Sun: All Day</em></div>
+								</li>																
+							</ul>
+							<hr class="el-hr-2">
+							<a href="#" class="btn btn-secondary btn-hours">BOOK NOW</a>
+						</div>
+					</div>
+				</div>
 
+				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center cajas-hours">
+					<div class="caja-hora">
+						<div class="item-caja">
+							<h3>LUNCH</h3>
+							<hr class="el-hr-2">
+							<ul class="list-group">
+								<li class="list-group-item">
+									<div class="w-100 text-center"><em>Mon - Thu: 7am - 11am</em></div>
+								</li>
+								<li class="list-group-item">
+									<div class="w-100 text-center"><em>Fri: 7am - 12pm</em></div>
+								</li>
+								<li class="list-group-item">
+									<div class="w-100 text-center"><em>Sat: 7am - 3pm</em></div>
+								</li>	
+								<li class="list-group-item">
+									<div class="w-100 text-center"><em>Sun: All Day</em></div>
+								</li>																
+							</ul>
+							<hr class="el-hr-2">
+							<a href="#" class="btn btn-secondary btn-hours">BOOK NOW</a>
+						</div>
+					</div>
+				</div>	
+	
+				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center cajas-hours">
+					<div class="caja-hora">
+						<div class="item-caja">
+							<h3>DINNER</h3>
+							<hr class="el-hr-2">
+							<ul class="list-group">
+								<li class="list-group-item">
+									<div class="w-100 text-center"><em>Mon - Thu: 7am - 11am</em></div>
+								</li>
+								<li class="list-group-item">
+									<div class="w-100 text-center"><em>Fri: 7am - 12pm</em></div>
+								</li>
+								<li class="list-group-item">
+									<div class="w-100 text-center"><em>Sat: 7am - 3pm</em></div>
+								</li>	
+								<li class="list-group-item">
+									<div class="w-100 text-center"><em>Sun: All Day</em></div>
+								</li>																
+							</ul>
+							<hr class="el-hr-2">
+							<a href="#" class="btn btn-secondary btn-hours">BOOK NOW</a>
+						</div>
+					</div>
+				</div>		
+									
+			</div>			
+		</div>	
+	</section>
+
+	<section class="menu">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center titulo-hours">
+					<h2>MENU</h2>	
+					<hr class="el-hr">
+					<p>Here is a selection of items from our menu. Please call for additional details.</p>	
+				</div>
+			</div>
+			<div class="row img-menu-caja">
+				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 img-menu">
+					<img src="assets/img/menu_1.jpg" alt="menu-1">
+				</div>
+				<div class="col-lg-4 col-md-4 hidden-sm hidden-xs img-menu">
+					<img src="assets/img/menu_2.jpg" alt="menu-1">
+				</div>
+				<div class="col-lg-4 col-md-4 hidden-sm hidden-xs img-menu">
+					<img src="assets/img/menu_3.jpg" alt="menu-1">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center puntos-menu">
+					<span class=" active"></span><span class=" active"></span>
+				</div>
+			</div>						
+		</div>
+	</section>
 
 
 	<!-- Script de Jquery y Bootstrap -->
