--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="shortcut icon" href="assets/img/favicon.ico">
     <!-- CSS STYLE -->
     <link href="assets/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/media.css">
 </head>
 <body>
 	<!-- HEADER -->
@@ -399,6 +400,7 @@
 		</div>	
 	</section>
 
+	<!-- SECTION MENU -->
 	<section class="menu">
 		<div class="container">
 			<div class="row">
@@ -421,12 +423,62 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center puntos-menu">
-					<span class=" active"></span><span class=" active"></span>
+					<span class="circulo-cambio"></span><span class="circulo-cambio"></span>
 				</div>
 			</div>						
 		</div>
 	</section>
 
+	<!-- SECTION BUY -->
+	<section class="buy">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center texto-buy">
+					<p>Buy Vitality Now!</p>
+				</div>				
+			</div>
+		</div>
+	</section>
+
+	<!-- FOOTER -->
+	<footer class="foo">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center texto-foo">
+					<h4><i class="fa fa-phone"></i> CALL</h4>
+					<p>555-213-4567</p>
+				</div>	
+				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center texto-foo">
+					<h4><i class="fa fa-map-marker"></i> VISIT</h4>
+					<p>3481 Melrose Place <br>Beverly Hills, CA 90210</p>
+				</div>	
+				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center texto-foo">
+					<h4><i class="fa fa-envelope"></i> EMAIL</h4>
+					<p>mail@example.com</p>
+				</div>									
+			</div>	
+			<div class="row redes-sociales-footer">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center texto-foo">
+					<ul class="list-inline">
+                        <li class="list-inline-item">
+                            <a href="#"><i class="fa fa-facebook fa-fw fa-2x"></i></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#"><i class="fa fa-twitter fa-fw fa-2x"></i></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#"><i class="fa fa-linkedin fa-fw fa-2x"></i></a>
+                        </li>
+                    </ul>
+				</div>
+			</div>	
+			<div class="row footer-final">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center texto-foo">
+					<p class="copyright">&copy; 2017 Start Bootstrap Themes</p>
+				</div>
+			</div>								
+		</div>		
+	</footer>
 
 	<!-- Script de Jquery y Bootstrap -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
